--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="find_calorie_intake">Find Calorie Intake</string>
     <string name="user_information">User Information</string>
     <string name="welcome_to_getfit">Welcome to GetFIT</string>
+    <string name="search">Search</string>
 </resources>
